k8s/threads-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: threads-deployment
spec:
  replicas: 2 # Empezamos con 2
  selector:
    matchLabels:
      app: threads
  template:
    metadata:
      labels:
        app: threads
    spec:
      containers:
        - name: threads
          image: flaviooyarce/t4-arqui-software:v1 # 👈 ¡Reemplaza esto!
          ports:
            - containerPort: 8000
