k8s/rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  ports:
    - name: amqp
      port: 5672
    - name: mgmt-ui
      port: 15672
  selector:
    app: rabbitmq
