k8s/threads-service.yml
apiVersion: v1
kind: Service
metadata:
  name: threads-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: threads
